Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116400

Fusion style Scrollbar cutoff

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7.0 FF
    • 6.7
    • Widgets: Styles
    • None
    • All
    • 413d79656 (dev)

    Description

      When using the Fusion style, the standalone Scrollbar is clipped.

       

      How to reproduce:

      1. Create a form
      2. Drag a vertical/horizontal Scrollbar on the form

      Attachments

        For Gerrit Dashboard: QTBUG-116400
        # Subject Branch Project Status CR V

        Activity

          People

            tpochep Timur Pocheptsov
            wladimir.leuschner Wladimir Leuschner
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes